k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billing
  labels:
    name: billing
    environment: production
